# machofile-rs

./: CITATION.cff  Cargo.toml  FEATURE_COMPARISON.md  MIGRATION_COMPLETE.md  PARITY_100_PERCENT.md  README.md  README_RUST.md  test_functionality.sh
.github/: RELEASE.md
.github/workflows/: ci.yml  dependencies.yml  release.yml
src/: api_compat.rs  codesign.rs  constants.rs  errors.rs  lib.rs  load_commands.rs  main.rs  parser.rs  structs.rs  symbol_parser.rs  utils.rs
