[package]
name = "machofile"
version = "2025.8.5"
edition = "2021"
authors = ["Marc Rivero <mriverolopez@gmail.com>"]
description = "A Rust library to parse Mach-O binary files with a focus on malware analysis and reverse engineering. Forked from the original Python project by Pasquale Stirparo."
license = "MIT"
repository = "https://github.com/seifreed/machofile-rs"
keywords = ["mach-o", "macho", "binary-parser", "security", "reverse-engineering"]
categories = ["parsing", "command-line-utilities"]

[dependencies]
byteorder = "1.5"
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
md-5 = "0.10"
sha1 = "0.10"
hex = "0.4"
thiserror = "1.0"
anyhow = "1.0"
uuid = "1.23"

[lib]
name = "machofile"
path = "src/lib.rs"

[[bin]]
name = "machofile"
path = "src/main.rs"

[profile.release]
lto = true
opt-level = 3
